--- a/layouts/partials/footer/footer_themecolour.twig
+++ b/layouts/partials/footer/footer_themecolour.twig
@@ -12,7 +12,8 @@
             <div class="col">
                 <div class="c-navigation-4 c-navigation-4-xs">
                     <a href="javascript:;" class="c-navigation__item">Log in</a>
-                    <a href="javascript:;" class="c-navigation__item c-navigation__item--borderred">Subscribe</a>
+                    <a href="javascript:;"
+                        class="c-navigation__item subscribe c-navigation__item--borderred">Subscribe</a>
                 </div>
             </div>
         </div>
