--- a/render.twig
+++ b/render.twig
@@ -47,6 +47,7 @@
         site            : site,
         networkData     : networkData,
         blogData        : blogData,
+        background      : config.background is defined ? config.background : '',
         adslots         : config.adslots is defined ? config.adslots : [],
         timeSuppress    : config.timeSuppress is defined ? config.timeSuppress : false
     } %}
