--- a/partials/panels/section-00.twig
+++ b/partials/panels/section-00.twig
@@ -3,11 +3,11 @@
 
 <div class="row" data-section="00">
     <div class="col">
-        <div class="c-cards-container bottom-border">
+        <div class="c-cards-container c-cards-container-xs bottom-border">
             <div class="row">
                 {% for i in 0..3 if articles[articleCount] %}
 
-                <div class="col col-md-3 left-border">
+                <div class="col-12 col-lg-3 left-border">
                     {{this.render('../_single-article.twig', {
                     article: articles[articleCount],
                     position: (articleCount+1),
@@ -21,59 +21,53 @@
             </div>
         </div>
 
-        <div class="c-cards-container bottom-border">
+        <div class="c-cards-container c-cards-container-xs bottom-border">
             <div class="row">
-                <div class="col col-md-3 left-border">
+                <div class="col-12 col-lg-3 left-border">
                     {% for i in 4..5 if articles[articleCount] %}
-
-                    <div class="col col-md-3 left-border">
-                        {{this.render('../_single-article.twig', {
-                        article: articles[articleCount],
-                        position: (articleCount+1),
-                        imageSize: {width: 296, height: 260},
-                        containerClass: "card-1-mobile card-1-tablet card-1-desktop",
-                        timeSuppress: timeSuppress
-                        }) | raw}}
-                        {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
-                    </div>
-                    {% endfor %}
-                </div>
-                <div class="col col-md-6 left-border">
-                    <div class="col col-md-3 left-border">
-                        {{this.render('../_single-article.twig', {
-                        article: articles[articleCount],
-                        position: (articleCount+1),
-                        imageSize: {width: 296, height: 260},
-                        containerClass: "card-1-mobile card-1-tablet card-1-desktop",
-                        timeSuppress: timeSuppress
-                        }) | raw}}
-                        {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
-                    </div>
-                </div>
-                <div class="col col-md-3 left-border">
-                    <div class="col col-md-3 left-border">
-                        {{this.render('../_single-article.twig', {
-                        article: articles[articleCount],
-                        position: (articleCount+1),
-                        imageSize: {width: 296, height: 260},
-                        containerClass: "card-1-mobile card-1-tablet card-1-desktop",
-                        timeSuppress: timeSuppress
-                        }) | raw}}
-                        {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="c-cards-container bottom-border">
-            <div class="row">
-                {% for i in 8..11 if articles[articleCount] %}
-                <div class="col col-md-3 left-border">
                     {{this.render('../_single-article.twig', {
                     article: articles[articleCount],
                     position: (articleCount+1),
                     imageSize: {width: 296, height: 260},
-                    containerClass: "card-1-mobile card-1-tablet card-1-desktop",
+                    containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription
+                    card-2-verticalMulti",
+                    timeSuppress: timeSuppress
+                    }) | raw}}
+                    {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                    {% endfor %}
+                </div>
+                <div class="col-12 col-lg-6 left-border">
+                    {{this.render('../_single-article.twig', {
+                    article: articles[articleCount],
+                    position: (articleCount+1),
+                    imageSize: {width: 296, height: 260},
+                    containerClass: "card-2-mobile card-2-tablet card-5-desktop card-5-text-center",
+                    timeSuppress: timeSuppress
+                    }) | raw}}
+                    {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                </div>
+                <div class="col-12 col-lg-3 left-border">
+                    {{this.render('../_single-article.twig', {
+                    article: articles[articleCount],
+                    position: (articleCount+1),
+                    imageSize: {width: 296, height: 260},
+                    containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription",
+                    timeSuppress: timeSuppress
+                    }) | raw}}
+                    {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                </div>
+            </div>
+        </div>
+
+        <div class="c-cards-container c-cards-container-xs bottom-border">
+            <div class="row">
+                {% for i in 8..11 if articles[articleCount] %}
+                <div class="col-12 col-lg-3 left-border">
+                    {{this.render('../_single-article.twig', {
+                    article: articles[articleCount],
+                    position: (articleCount+1),
+                    imageSize: {width: 296, height: 260},
+                    containerClass: "card-2-mobile card-2--noDescription card-2-tablet card-4-desktop",
                     timeSuppress: timeSuppress
                     }) | raw}}
                     {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
