--- a/static/sass/cards/_card-1.scss
+++ b/static/sass/cards/_card-1.scss
@@ -1,11 +1,20 @@
 @mixin card-1-base() {
     @include card-name("C1 mobile");
+
     .c-cards-view {
         @include flex-direction(row, horizontal);
+        margin-bottom: 15px;
 
         &__media {
             width: 79px;
             height: 96px;
+            position: absolute;
+            left: 0;
+            &--video {
+                &:before {
+                    @include size(88px);
+                }
+            }
         }
 
         &__heading {
@@ -17,12 +26,15 @@
         &__description {
             display: none;
         }
-        &__time {
-        }
         &__author {
             &-name {
                 display: none;
             }
+        }
+
+        &__container {
+            @include calc(width, "100% - 96px");
+            margin-left: 96px;
         }
 
         // ****************************
@@ -50,6 +62,16 @@
                 }
             }
         }
+
+        &.without-image {
+            background-color: transparent;
+            .c-cards-view {
+                &__container {
+                    width: 100%;
+                    margin-left: 0px;
+                }
+            }
+        }
     }
 }
 
@@ -62,71 +84,6 @@
 @mixin card-1-tablet-base() {
     @include card-1-base();
     @include card-name("C1 tablet");
-    .c-cards-view {
-        &__media {
-            width: 79px;
-            height: 96px;
-            position: absolute;
-            left: 0;
-            &--video {
-                &:before {
-                    @include size(88px);
-                }
-            }
-        }
-
-        &__container {
-            @include calc(width, "100% - 96px");
-            margin-left: 96px;
-        }
-
-        // &__heading {
-        //     @include font-size(28);
-        //     max-height: 140px;
-        //     min-height: 40px;
-        //     margin-top: 72px;
-        // }
-
-        // &__container {
-        //     margin-top: 20px;
-        //     margin-left: 0;
-        //     position: absolute;
-        //     width: 238px;
-        //     height: 373px;
-        // }
-
-        // &__time {
-        //     position: absolute;
-        //     bottom: 23px;
-        // }
-
-        // &.without-image {
-        //     .c-cards-view {
-        //         &__container {
-        //             margin-top: 40px;
-        //             padding: 0 40px;
-        //         }
-        //         &__heading {
-        //             margin-top: 82px;
-        //             margin-bottom: 15px;
-        //             @include font-size(28);
-        //             font-weight: $weightBold;
-        //             @include flex-height(68px);
-        //         }
-        //         &__description {
-        //             margin-top: 10px;
-        //             display: block;
-        //             @include font-size(18);
-        //             line-height: 1.56;
-        //             @include flex-height(85px);
-        //         }
-        //         &__author {
-        //             margin-top: 115px;
-        //             border-top: 1px solid rgba($greyish, 0.3);
-        //         }
-        //     }
-        // }
-    }
 
     // ****************************
     //          SOCIAL
