--- a/static/sass/cards/_card-5.scss
+++ b/static/sass/cards/_card-5.scss
@@ -1,192 +1,60 @@
-@mixin card-5-base() {
-    @include card-name("C5 mobile");
-
-    .c-cards-view {
-
-
-        height: inherit;
-        align-items: stretch;
-
-        &__media {
-            @include flex-width(86px);
-            height: 110px;
-
-            &--video {
-                &:before {
-                    @include size(55px);
-                }
-            }
-        }
-
-        &__container {
-            margin-left: 14px;
-            width:100%;
-            height: inherit;
-        }
-        &__category {
-            margin-bottom:3px;
-        }
-
-        &__heading {
-            @include flex-height(66px);
-            @include font-size(18);
-        }
-        &__author {
-            margin-top: 3px;
-        }
-
-        &__author-name {
-            @include font-size(10);
-        }
-        &__time {
-            @include font-size(10);
-        }
-
-
-        &.social {
-            .social-icon {
-                @include size(30px);
-
-                &:before {
-                    @include font-size(13);
-                    line-height: 32px;
-                }
-            }
-
-            &.without-image {
-                .card {
-                    &__container {
-                        @include calc(width, '100% - 30px');
-                        margin-left: 30px;
-                        padding: 0 20px;
-                        margin: 15px 0;
-                        height: inherit;
-                    }
-                }
-            }
-        }
-
-
-        &.without-image {
-            background-color:white;
-
-            .c-cards-view {
-
-                &__container {
-                    width: 100%;
-                    padding: 0 0;
-                    margin-left: 0;
-                    height: inherit;
-                }
-            }
-        }
-    }
-}
-
-.card-5-mobile {
-    @media #{$mobile} {
-        @include card-5-base();
-    }
-}
-
-@mixin card-5-tablet-base() {
-
-    @include card-5-base();
-
-    .c-cards-view {
-
-        &__media {
-            min-width: 254px;
-            height: 167px;
-
-            &--video {
-                &:before {
-                    @include size(70px);
-                }
-            }
-        }
-
-        &__category {
-            margin-bottom:12px;
-        }
-
-        &__container {
-            margin-left: 20px;
-        }
-
-        &__author {
-            margin-top:42px;
-        }
-
-        &__author-name {
-            @include font-size(11);
-        }
-
-        &__time {
-            @include font-size(11);
-        }
-
-
-        &__heading {
-            @include font-size(22);
-            @include flex-height(70px);
-        }
-
-
-        &.social {
-            .social-icon {
-                @include size(50px);
-
-                &:before {
-                    @include font-size(22);
-                    line-height: 52px;
-                }
-            }
-
-            &.without-image {
-                .c-cards-view {
-                    &__container {
-                        @include calc(width, '100% - 50px');
-                        margin-left: 50px;
-                    }
-                }
-            }
-        }
-
-        &.without-image {
-
-            .c-cards-view {
-
-                &__description {
-                    @include font-size(13);
-                    @include flex-height(42px);
-                    display:block;
-                    margin-top:10px;
-                    line-height:1.54;
-                }
-                &__author {
-                    margin-top:34px;
-                }
-                &__author-name {
-                    font-style:normal;
-                    font-family: $font-family-sans-serif;
-                    font-weight: $weightMedium;
-                }
-            }
-        }
-    }
-}
-
-.card-5-tablet {
-    @media #{$tablet} {
-        @include card-5-tablet-base();
-        @include card-name("C5 tablet");
-    }
-}
-
 .card-5-desktop {
     @media #{$desktop-up} {
-        @include card-5-tablet-base();
-        @include card-name("C5 desktop");
+        .c-cards-view {
+            @include flex-direction(column, vertical);
+            &__media {
+                max-height: 430px;
+                margin-bottom: 15px;
+                overflow: hidden;
+            }
+
+            &__heading {
+                @include font-size(32);
+                line-height: 1.33;
+                margin-top: 5px;
+            }
+
+            &__description {
+                color: $grey5;
+                @include font-size(13);
+                line-height: 1.38;
+            }
+
+            &__author {
+                @include flexbox;
+                @include align-items(center);
+
+                &-name {
+                    @include font-size(12);
+                    color: $black;
+                    line-height: 1.33;
+                    font-family: $primaryFont;
+                    font-weight: $weightMedium;
+                    margin-right: 15px;
+                    position: relative;
+                    padding-left: 12px;
+
+                    &:before {
+                        content: "";
+                        position: absolute;
+                        left: 0;
+                        top: 50%;
+                        @include translate(0, -50%);
+                        @include size(4px);
+                        background-color: $blue_sh5;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.card-5-text-center {
+    .c-cards-view {
+        text-align: center;
+
+        &__author {
+            @include justify-content(center);
+        }
     }
 }
