--- a/static/sass/components/_component.section-panel.scss
+++ b/static/sass/components/_component.section-panel.scss
@@ -2,7 +2,7 @@
 
 .c-section-panel__background {
     @include padding(25 0);
-    background:rgba(185,185,185,.2);
+    background: $black;
     @media #{$desktop-up} {
         @include margin(30 0 0 0);
     }
