--- a/static/sass/_elements.all.scss
+++ b/static/sass/_elements.all.scss
@@ -2,18 +2,75 @@
 // RESET
 //=================================
 
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+abbr,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
+small,
+strong,
+sub,
+sup,
+var,
+b,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -23,8 +80,18 @@ time, mark, audio, video {
   background: transparent;
 }
 
-main, article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+main,
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
 
@@ -55,15 +122,16 @@ embed {
   height: auto;
 }
 
-blockquote, q {
-  quotes:none;
+blockquote,
+q {
+  quotes: none;
 }
 
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 
@@ -73,9 +141,9 @@ a {
   font-size: 100%;
   vertical-align: baseline;
   background: transparent;
-  
+
   &:hover {
-    text-decoration:none;
+    text-decoration: none;
   }
 }
 
@@ -83,12 +151,13 @@ del {
   text-decoration: line-through;
 }
 
-abbr[title], dfn[title] {
+abbr[title],
+dfn[title] {
   border-bottom: 1px dotted;
   cursor: help;
 }
 li {
-    list-style-type:none;
+  list-style-type: none;
 }
 i,
 em {
@@ -101,7 +170,7 @@ strong {
 }
 
 q {
-    quotes: "\201C" "\201D" "\2018" "\2019";
+  quotes: "\201C""\201D""\2018""\2019";
 }
 
 table {
@@ -126,7 +195,7 @@ select {
   vertical-align: middle;
 }
 
-input[type=search] {
+input[type="search"] {
   -webkit-appearance: textfield;
   -webkit-box-sizing: content-box;
   &::-webkit-search-cancel-button,
@@ -150,7 +219,7 @@ textarea {
   font-family: inherit;
   font-size: 100%;
   margin: 0;
-  border:none;
+  border: none;
 }
 
 button {
@@ -194,45 +263,43 @@ pre,
 code,
 kbd,
 samp {
-  font-family: monospace,
-  sans-serif;
+  font-family: monospace, sans-serif;
 }
 
 html {
-    font-size:100%;
+  font-size: 100%;
 }
 
 html,
 body {
-    @include size($viewportSize);
-    min-height: 100% !important;
+  @include size($viewportSize);
+  min-height: 100% !important;
 }
 
-
 svg {
-    // bootstrap reboot sets vertical align to middle which screws some things up
-    // Workaround for the SVG overflow bug in IE10/11 is still required.
-    // See https://github.com/twbs/bootstrap/issues/26878
-    vertical-align: inherit;
-  }
+  // bootstrap reboot sets vertical align to middle which screws some things up
+  // Workaround for the SVG overflow bug in IE10/11 is still required.
+  // See https://github.com/twbs/bootstrap/issues/26878
+  vertical-align: inherit;
+}
 
 body {
-    height: auto;
-    background: $white none repeat scroll 0 0;
-    color: $greyish;
-    font-family: $primaryFont !important;
-    font-weight: $weightRegular;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  height: auto;
+  background: $white none repeat scroll 0 0;
+  color: $greyish;
+  font-family: $primaryFont !important;
+  font-weight: $weightRegular;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
-    // overflow-y: scroll;
+  // overflow-y: scroll;
+  //overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
+  color: color(dark);
+  // background: #fff;
+  font-family: $font-family-sans-serif;
+
+  @media #{$media-ipadSmall} {
     overflow-x: hidden;
-    -webkit-overflow-scrolling:touch;
-    color: color(dark);
-    // background: #fff;
-    font-family: $font-family-sans-serif;
-
-    @media #{$media-ipadSmall} {
-        overflow-x: hidden;
-    }
+  }
 }
