--- a/static/sass/cards/_card-5.scss
+++ b/static/sass/cards/_card-5.scss
@@ -4,6 +4,7 @@
             @include flex-direction(column, vertical);
             &__media {
                 max-height: 430px;
+                min-height: 430px;
                 margin-bottom: 15px;
                 overflow: hidden;
             }
